# tfm-clinical-ai

./: .env.example  .gitignore  DECISIONS.md  README.md  docker-compose.yml  pyproject.toml
configs/: evaluation.yaml  rag.yaml  training.yaml
data/processed/: eval_sample_indices.json
docs/: bibliography_reference_guide.md
docs/thesis_latex/: bibliografia.bib  plantilla.aux  plantilla.bbl  plantilla.blg  plantilla.fdb_latexmk  plantilla.fls  plantilla.lof  plantilla.lot  plantilla.out  plantilla.tex  plantilla.toc
notebooks/: 00_vertical_slice.ipynb  01_UnslothTutorial_Llama3_(8B)_Ollama.ipynb  01_mtsamples_eda.ipynb  02_pubmed_ingestion.ipynb  03_embedding_benchmark.ipynb  04_UnslothTutorial_Llama3_(8B)_Ollama.ipynb  04_UnslothTutorial_Llama3_1_(8B)_Alpaca.ipynb  05_rag_pipeline.ipynb  06_evaluation.ipynb
scripts/: backfill_citation_metrics.py  build_dataset.py  build_eval_sample.py  convert_to_gguf.py  import_filestore_run.py  index_corpus.py  inspect_dataset.py  pubmed_ingestion.py  run_app.sh  run_evaluation_phase.py  run_evaluation_rollup.py  run_finetune.py  verify_setup.py
src/: config.py  llm_clients.py  logging_config.py  prompts.py  tracking.py
src/api/: app.py  examples.py  formatting.py  llama_server.py  service.py  theme.py
src/data/: mtsamples.py  pubmed_ingestion.py
src/evaluation/: aggregation.py  metrics.py  mlflow_logging.py  plot_style.py  prompts.py  runner.py  sample.py  server_check.py
src/rag/: embedder.py  indexer.py  pipeline.py  reranker.py  retriever.py  scorer.py
tests/: test_api_formatting.py  test_citation_metrics.py
(+2 files in other folders)
