[project]
name = "tfm-clinical-ai"
version = "0.1.0"
description = "Hybrid Clinical Assistance System: LLM Fine-Tuning + RAG for Evidence-Based Medicine"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # --- Core ---
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",

    # --- Data ---
    "datasets>=2.19",
    "biopython>=1.83",
    "pandas>=2.2",

    # --- LLM & Embeddings ---
    "transformers>=4.44",
    "torch>=2.3",
    "sentence-transformers>=3.0",
    "accelerate>=0.33",
    "huggingface-hub>=0.24",

    # --- RAG ---
    "fastembed>=0.4.0",
    "qdrant-client[fastembed]>=1.9.0",

    # --- MLOps ---
    "mlflow>=2.16",

    # --- Evaluation ---
    "ragas>=0.1.10",

    # --- Interface ---
    "gradio>=4.40",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pytest>=8.3",
    "ruff>=0.5",
    "rank-bm25>=0.2",     # BM25 candidate pre-ranking for golden dataset annotation
    "scikit-learn>=1.5",  # TF-IDF fallback and evaluation utilities
]

# Unsloth is installed separately due to its specific CUDA requirements.
# See: https://github.com/unslothai/unsloth#installation
finetuning = [
    "unsloth[colab-new]>=2024.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
